--- a/login.html
+++ b/login.html
@@ -1,48 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&family=Nanum+Myeongjo:wght@400;700;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="css/login.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    /> <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="./css/login.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
     <title>Login</title>
-</head>
-<body>
-    <div class="image">
-        <div class="card">
-            <h1 class="title">Registrando</h1>
-            <div class="social_Icons">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-solid fa-envelope"></i></a>
-            </div>
-            <form action="">
-                <div class="inputbox">
-                    <input type="text" placeholder="example@gmail.com">
-                    <div class="icon"><i class="fa-solid fa-user"></i></div>
-                </div>
-                <div class="inputbox">
-                    <input type="password" placeholder="*******">
-                    <div class="icon"><i class="fa-solid fa-lock"></i></div>
-                </div>
-                <div class="inputbox ">
-                    <div class="option-div">
-                        <input type="checkbox">
-                        <span>RÉCUERDAME EN ESTE DISPOSITIVO</span>
-                    </div>
-                    <input class="button" type="submit" value="NEXT">
-                    <input class="button" type="submit" value="NUEVO USUARIO">
-                    <div class="forget-div">
-                        <a href="#">¿OLVIDASTE TU CONSTRASEÑA? RECUPÉRALA</a>
-                    </div>
-                </div>                
-            </form>
+  </head>
+  <body>
+    <div class="login-container">
+      <div class="login-info-container">
+        <h1 class="title">Registrando</h1>
+        <div class="social-login">
+          <div class="social-login-element">
+            <img src="images/google.svg" alt="google-image" />
+            <span>Google</span>
+          </div>
+          <div class="social-login-element">
+            <img src="images/facebook.svg" alt="facebook-image" />
+            <span>Facebook</span>
+          </div>
         </div>
+        <p>or</p>
+        <form class="inputs-container">
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user"></i></span>
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Username"
+                aria-label="Username"
+                aria-describedby="basic-addon1"/>
+            </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-lock"></i></span>
+              <input
+                type="password"
+                class="form-control"
+                placeholder="*************"
+                aria-label="Username"
+                aria-describedby="basic-addon1"
+              />
+            </div>
+          <div class="option-div">
+            <input type="checkbox" />
+            <span>RÉCUERDAME EN ESTE DISPOSITIVO</span>
+          </div>
+          <p>Olvidaste tu contrasena? <span class="span">Click here</span></p>
+          <button class="btn">NEXT</button>
+          <button class="btn">Nuevo Usuario</button>
+          <p>No tienes una cuenta? <span class="span">Sign Up</span></p>
+        </form>
+      </div>
+
+      <img class="image-container" src="images/login.svg" alt="" />
     </div>
-    
-</body>
+  </body>
 </html>
