--- a/dom/profile.html
+++ b/dom/profile.html
@@ -164,7 +164,7 @@
         </div>
       </section>
 <!-- ===== ===== none card ===== ===== -->
-      <section class="timeline_about card" style="display:">
+      <section class="card-disabled">
       </section>
 <!-- ===== ===== none card ===== ===== -->
       <section class="timeline_about card">
@@ -226,7 +226,7 @@
         </div>
       </section>
       <!-- ===== ===== none card ===== ===== -->
-          <section class="timeline_about card">
+          <section class="card-disabled">
       </section>
 <!-- ===== ===== none card ===== ===== -->
       <section class="timeline_about card">
